--- a/docs/release_notes.txt
+++ b/docs/release_notes.txt
@@ -1,8 +1,8 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-    LiteStep 0.24.7
+    LiteStep 0.24.8
     Release Notes
     
-    Copyright (c) 2005 - Litestep Development Team
+    Copyright (c) 2008 - Litestep Development Team
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 Contents:
@@ -12,7 +12,6 @@ Contents:
 -)USAGE (HELP)
 -)DEVELOPMENT
 -)CREDITS
--)HISTORY
 -)LEGAL
 
 -- ABOUT -----------------------------------------------------------------------
@@ -40,31 +39,49 @@ Contents:
  ---------------------
  - The Litestep Development Team's portal.
  - Contains all official LiteStep releases.
- - Litestep Developer moderated forums.
+ - LiteStep module development resources.
+ - Community contact information.
 
  http://www.litestep.net/
  ------------------------
- - The largest LiteStep theme and community website.
+ - The largest LiteStep theme gallery and community website.
  - Screenshot and theme repository.
  - Module downloads.
  - User forums for everything LiteStep related.
 
- http://wiki.litestep.com/
- -------------------------
- - A LiteStep wiki with content based largely around the community driven
-   Open Theme Standard. The OTS facilitates a common framework for Themers to
-   create desktop environments easily accessible to many users.
+ http://www.ls-universe.info/
+ ----------------------------
+ - Home of the xModules.
+ - Module downloads.
+ - Community news.
+ - Theme gallery.
+
+ http://wiki.litestep.com.ar/
+ ----------------------------
+ - A LiteStep community wiki with content based largely around the community
+   driven Open Theme Standard.  The OTS facilitates a common framework for
+   Themers to create desktop environments easily accessible to many users.
    (See also: http://o-t-s.sourceforge.net/)
 
- http://loose-screws.com/modules.php
  http://www.shellfront.org/modules-list.php
  ------------------------------------------
  - Module downloads.
 
+ http://www.litestep.de/
+ -----------------------
+ - German community website.
+
+ http://www.liteste-france.net/
+ ------------------------------
+ - French community website.
+
 -- SYSTEM REQUIREMENTS ---------------------------------------------------------
 
  LiteStep requires only that you are running a 32bit version of Windows:
- Windows 95, Windows 98(se), Windows ME, Windows 2000, Windows XP
+
+  Windows 95, Windows 98(se), Windows ME, Windows 2000, Windows XP
+
+ NOTE: Windows Vista 32bit is currently *NOT* supported!
 
  LiteStep is designed to consume less resources than the Explorer shell which it
  replaces; so there are no system requirements above and beyond that which is
@@ -72,7 +89,7 @@ Contents:
 
  However, depending on what modules (add-ons) are loaded, any given desktop
  environment will have its own system requirements.  This may range from being
- only compatible with Win2K/XP or requiring a 3d accelerated graphics card. Be
+ only compatible with Win2K/XP or requiring a 3d accelerated graphics card.  Be
  sure to read the accompanying documentation for any theme or module that you
  choose to install.
 
@@ -82,20 +99,18 @@ Contents:
  -----
  You are about to install a replacement shell for Windows.  A shell is not a
  normal application; it runs as a special system process.  Replacing the shell
- is not a supported procedure by Microsoft®, and as such, it is possible  that
- if you do something wrong, you may end up with a non functional desktop and/ or
- your system may display an error message asking you to re-install Windows.  Do
- NOT panic, a very simple solution will put you back to where you need to be, so
- that you can fix whatever mistake you made, and try again.  Please read the
- documentation on this topic that came with your LiteStep distribution, or
- review the "Manual Install" steps below.
+ is not a supported procedure by Microsoft®, and as such, it is possible that if
+ you do something wrong, you may end up with a non functional desktop and/ or
+ your system may display an erroneous error message asking you to re-install
+ Windows.  Do NOT panic, a very simple solution will put you back to where you
+ need to be, so that you can fix whatever mistake you made, and try again.
+ Please read the documentation on this topic that came with your LiteStep
+ distribution, or review the "Manual Install" steps below.
 
  Now that you are ready to get going, there are a couple of methods to start
  using LiteStep.
 
- (see also: http://wiki.litestep.com/LiteStep:Installation)
-
- You MUST have administrative access to install Litestep.
+ You MUST have administrative access to install LiteStep.
 
  A) LiteStep Distributions (Recommended and automated)
  -----------------------------------------------------
@@ -103,12 +118,32 @@ Contents:
  The recommended way to start with LiteStep is to install one of the community
  driven LiteStep distributions.  Typically these distributions come with a
  friendly step by step installation wizard that will set your system up using a
- default desktop environment and theme.  Currently we recommend using the very
- successful distribution by Omar which uses the Open Theme Standard 2 (OTS2).
+ default desktop environment and theme.  Currently we recommend using one of the
+ following two distributions which implement the Open Theme Standard 2 (OTS2).
 
- Please read the installation guide on his website before installing:
+ Traditionally Omar's LiteStep Installer has been widely accepted and used.
+ However, Omar has long abandoned his distribution, and as such it has fallen
+ out of date.  It no longer contains the most recent version of LiteStep or
+ modules; thus requiring manual updates to the distribution after installation.
+ Because of this another installation project has been started; the LiteStep
+ Open Source Installer (LOSI) is fully up to date with the latest LiteStep and
+ module releases.  However, LOSI yet lacks proper documentation and has not
+ undergone as thorough of testing where-as Omar's installer and default theme is
+ well documented and has been successfully used for the last several years.
 
- http://beyondconvention.net/ohussain/lsinstaller/
+ Omar's LiteStep Installer may be downloaded from:
+
+ http://www.beyondconvention.com/ohussain/lsinstaller/
+
+ LOSI may be downloaded from:
+
+ http://www.tlundberg.com/LOSI/
+
+ Regardless of which distribution you use, you will find plenty of help on the
+ LiteStep Mailing List (LSML) and user forums on one of the community websites.
+ Please join us in our IRC channel #litestep on Freenode (irc.freenode.net) if
+ you have any immediate support need.  However, be patient when asking a
+ question as IRC is renown for being full of idlers.
 
  B) LiteStep From Scratch (Manual install and configuration)
  -----------------------------------------------------------
@@ -122,23 +157,24 @@ Contents:
 
  Create a folder for LiteStep.  Generally this is done at "C:\LiteStep".
 
- Extract the contents of "LS-0.24.7u.zip" to this folder.  Once the contents are
+ Extract the contents of "LS-0.24.8.zip" to this folder.  Once the contents are
  extracted, there should be a file located at "C:\LiteStep\litestep.exe".
 
  Create a text file named "step.rc" and place it in the same folder as
  "litestep.exe".  Using the previous example location, this empty text file
  should now be at "C:\LiteStep\step.rc".
 
- Next, consult the section "HELP" to configure LiteStep via the step.rc text
- file.  Do NOT set LiteStep as your shell until you have configured it,
- otherwise you will be left with a dysfunctional (yet recoverable) system.
+ Next, consult the section "USAGE (HELP)" to configure LiteStep via the step.rc
+ text file (A sample step.rc is provided in that section).  Do NOT set LiteStep
+ as your shell until you have configured it, otherwise you will be left with a
+ dysfunctional (yet recoverable) system.
 
  To set LiteStep as your shell, follow these instructions:
 
   1. Win9x/ME
 
     - Using a text editor (e.g. Notepad) open the Windows System file named
-      "system.ini". This file's location is normally "C:\Windows\system.ini"
+      "system.ini".  This file's location is normally "C:\Windows\system.ini"
 
     - Locate the line that begins with "shell=".  This line is located in the
       "[boot]" section.  Typically the full line looks like "shell=explorer.exe"
@@ -146,8 +182,8 @@ Contents:
       placing a semi-colon at the beginning of the line.  The line should now
       look like ";shell=explorer.exe" (without the quotation marks).
 
-    - Create a new "shell=" line in the same location as the one removed. This
-      new line should contain the location of "litestep.exe". For example it
+    - Create a new "shell=" line in the same location as the one removed.  This
+      new line should contain the location of "litestep.exe".  For example it
       might look like "shell=C:\LiteStep\litestep.exe" (without the quotation
       marks).
 
@@ -163,10 +199,10 @@ Contents:
       Boot into DOS (press F8 before Windows starts, or use a DOS boot disk).
       Issue the command "edit C:\Windows\system.ini" adjusting for the location
       of your system.ini file.  Delete the new line you created in the previous
-      steps, and uncomment the line you previously disabled. Do this by deleting
-      the semicolon at the start of the line.  You should now have one line that
-      starts with "shell=" in the "[boot]" section of the "system.ini" file,
-      "shell=explorer.exe".  Save the file and reboot your system.
+      steps, and uncomment the line you previously disabled.  Do this by
+      deleting the semicolon at the start of the line.  You should now have one
+      line that starts with "shell=" in the "[boot]" section of the "system.ini"
+      file, "shell=explorer.exe".  Save the file and reboot your system.
 
   2. Win2K/XP
 
@@ -177,7 +213,7 @@ Contents:
       Administrator has enabled "per user" shells.  This is highly unlikely.
 
       While it is "possible" to run LiteStep at the same time as the default
-      Explorer shell, it is discouraged and completely unsupported. Good luck!
+      Explorer shell, it is discouraged and completely unsupported.  Good luck!
 
     - Open "regedit" or a similar utility.
 
@@ -248,7 +284,7 @@ Contents:
       as your shell if you managed to configure everything correctly.
 
     - If you end up with a blank or otherwise non-functional desktop.  Press
-      CTRL+SHIFT+ESC key combination.  The Windows Task Manager will open. Use
+      CTRL+SHIFT+ESC key combination.  The Windows Task Manager will open.  Use
       the File menu to Run a New Task.  Launch your registry editor and use the
       previous instructions to set your system shell back to the default
       Explorer shell.
@@ -257,8 +293,7 @@ Contents:
 
  The following section lays out the structure of LiteStep, and the available
  configuration options.  When used within this document to describe a parameter
- value, <> means a required parameter, and [] means an optional parameter.
- Otherwise, those characters have special meaning in the LiteStep configuration.
+ value, <> means a required parameter, and {} means an optional parameter.
 
  A) LiteStep Structure
  ---------------------
@@ -269,12 +304,12 @@ Contents:
  websites (See the ABOUT section).
 
  The LiteStep core consists of:
-  - litestep.exe     Main executable. Loads modules, handles window messages
-                     communication. Runs startup apps, includes DDE and tray
+  - litestep.exe     Main executable.  Loads modules, handles window messages
+                     communication.  Runs startup apps, includes DDE and tray
                      services.
 
-  - lsapi.dll        LiteStep API for modules to use. Loads and parses step.rc;
-                     handles $evars$ and all other configuration. Manages !bang
+  - lsapi.dll        LiteStep API for modules to use.  Loads and parses step.rc;
+                     handles $evars$ and all other configuration.  Manages !bang
                      commands, includes core !bangs.
 
   - hook.dll         The system shell hook used by some legacy LiteStep modules
@@ -324,7 +359,7 @@ Contents:
   !<bang command>
   ---------------
    Passes the specified !bang command and parameters to a currently running
-   instance of LiteStep. The previous instance of LiteStep receiving the !bang
+   instance of LiteStep.  The previous instance of LiteStep receiving the !bang
    command executes the specified !bang command.
 
    This is useful for external control of LiteStep, perhaps from a script.
@@ -345,15 +380,15 @@ Contents:
  C) Step.rc Syntax
  -----------------
 
- The step.rc is formatted in a <command> [<value> [...]] directive syntax.
+ The step.rc is formatted in a <command> {value} directive syntax.
 
   - There may be one directive per textual line.
 
   - <command> must not be quoted, bracketed or in any other way use the reserved
     characters of the step.rc parsers except in the special case of * character.
 
-  - <value> is dependant per <command> directive and is explained in each
-    directive's documentation. If it is a directive required by a Module, please
+  - {value} is dependant per <command> directive and is explained in each
+    directive's documentation.  If the directive is required by a Module, please
     read the corresponding documentation provided with the Module.
 
  LiteStep employs three levels of parsing to step.rc at load-time and expands
@@ -370,7 +405,7 @@ Contents:
 
       See "Step.rc Directive Parser" for other special character descriptions.
 
-    - The File Parser behaves similarly to a pre-processor. The File Parser is
+    - The File Parser behaves similarly to a pre-processor.  The File Parser is
       the first to touch the step.rc.
 
     - The step.rc File Parser evaluates the following Directives:
@@ -388,25 +423,25 @@ Contents:
       *  Used at the beginning of a <command> directive to delineate the ability
          to specify multiple <command>s of the same name (one per line).
 
-      $$ Used as a set around a <value> parameter to delineate that a variable
+      $$ Used as a set around a {value} parameter to delineate that a variable
          expansion should occur for that parameter.
 
-      [] Used as a set around a <value> parameter to delineate that the contents
+      [] Used as a set around a {value} parameter to delineate that the contents
          are a single token value.
 
-      "" Used as a set around a <value> parameter to delineate that any enclosed
+      "" Used as a set around a {value} parameter to delineate that any enclosed
          whitespace is part of the value (whitespace is TABs and SPACEs).
 
-      '' Used as a set within the <value> parameter to delineate that the
+      '' Used as a set within the {value} parameter to delineate that the
          enclosed contents are a sub value.
 
-    - The step.rc Directive Parser recognizes several <value> types.
+    - The step.rc Directive Parser recognizes several {value} types.
 
-      Int
-      String
-      Bool
-      Line
-      Color
+      Boolean => TRUE or FALSE
+      Color   => Hexidecimal RGB color value, or RGB decimal triplet
+      Integer => Any real Integer value
+      Line    => Unparsed literal text
+      String  => Whitespace delimited string
 
   3. Step.rc Evaluation Parser
 
@@ -468,7 +503,7 @@ Contents:
   ---------------------------
    Conditionally parse a section of the step.rc.
 
-   The If directive marks the start of a conditional section. The If directive
+   The If directive marks the start of a conditional section.  The If directive
    evaluates an expression to produce a true (nonzero) or false (zero) result.
    If the result is true then the lines following up to the next ElseIf, Else,
    or EndIf are parsed, otherwise they are ignored.
@@ -477,11 +512,12 @@ Contents:
    if all of the previous If and ElseIf expressions have evaluated to false.
 
    The Else directive parses the lines that follow it only if all the previous
-   If and Elseif expressions have evaluated to false. There may be at most one
+   If and Elseif expressions have evaluated to false.  There may be at most one
    Else and it must follow any ElseIf statements.
 
-   The EndIf directive marks the end of a conditional section. Each If directive
-   must have a corresponding EndIf. If-EndIf blocks may be nested to any depth.
+   The EndIf directive marks the end of a conditional section.  Each If
+   directive must have a corresponding EndIf.  If-EndIf blocks may be nested to
+   any depth.
 
    The expressions that If and ElseIf evaluate can use the following operators,
    listed in order from highest precedence to lowest:
@@ -492,9 +528,9 @@ Contents:
      Logical AND:  and
       Logical OR:  or
 
-   Expressions may also contain Boolean and integer constants and references to
-   Litestep variables (e-vars). Do not enclose variables references in dollar
-   signs ($) when they occur in conditional expressions. Strings are not
+   Expressions may also contain Boolean and Integer constants and references to
+   LiteStep variables (e-vars).  Do not enclose variables references in dollar
+   signs ($) when they occur in conditional expressions.  Strings are not
    supported in expressions (neither string constants nor string variables) in
    0.24.7.
 
@@ -514,8 +550,8 @@ Contents:
    Usage:
     LoadModule C:\LiteStep\modules\popup.dll
 
-  LSNoStartup <bool>
-  ------------------
+  LSNoStartup <boolean>
+  ---------------------
    Disables running of system Startup items.
 
    Note: LiteStep must be restarted for this setting to take affect.
@@ -523,17 +559,17 @@ Contents:
    Usage:
     LSNoStartup TRUE
 
-  LSAutoHideModules <bool>
-  ------------------------
+  LSAutoHideModules <boolean>
+  ---------------------------
    Automatically hides all LiteStep modules from the display when an application
    enters Full Screen mode. (e.g. A full screen game)
 
    Usage:
     LSAutoHideModules TRUE
 
-  LSNoShellWarning <bool>
-  -----------------------
-   Disables the warning issued when loading Litestep if another shell is already
+  LSNoShellWarning <boolean>
+  --------------------------
+   Disables the warning issued when loading LiteStep if another shell is already
    running.  Do not use this setting unless you know what you are doing!
 
    Note: LiteStep must be restarted for this setting to take affect.
@@ -541,32 +577,34 @@ Contents:
    Usage:
     LSNoShellWarning TRUE
 
-  LSSetAsShell <bool>
-  -------------------
-   Registers LiteStep as the system shell on load. This will enable an automatic
-   re-spawn of LiteStep if LiteStep exits inadvertently. However, this feature
-   is experimental and not recommended at this time.  If you experience problem
-   using Explorer as your file manager, try disabling this setting.
+  LSSetAsShell <boolean>
+  ----------------------
+   Registers LiteStep as the system shell on load.  This will enable an
+   automatic re-spawn of LiteStep if LiteStep exits inadvertently.  However,
+   this feature is experimental and not recommended at this time.  If you
+   experience problem using Explorer as your file manager, try disabling this
+   setting.
 
    Note: LiteStep must be restarted for this setting to take affect.
 
    Usage:
     LSSetAsShell TRUE
 
-  LSUseSystemDDE <bool>
-  ---------------------
-   Enables Dynamic Data Exchange under LiteStep. This is required to enable
-   many features of the Explorer file manager and other system services. However
-   its functionality is not fully developed at this time and irregularities may
-   exist. If you experience resource usage troubles, try disabling this setting.
+  LSUseSystemDDE <boolean>
+  ------------------------
+   Enables Dynamic Data Exchange under LiteStep.  This is required to enable
+   many features of the Explorer file manager and other system services.
+   However its functionality is not fully developed at this time and
+   irregularities may exist.  If you experience resource usage troubles, try
+   disabling this setting.
 
    Note: LiteStep must be restarted for this setting to take affect.
 
    Usage:
     LSUseSystemDDE TRUE
 
-  LSDisableTrayService <bool>
-  ---------------------------
+  LSDisableTrayService <boolean>
+  ------------------------------
    Disables the Icon Notification (Systray) service.  This is useful if you have
    to run LiteStep on top of another shell, or if you have another application
    implementing the service.
@@ -578,8 +616,8 @@ Contents:
 
   LSImageFolder <path>
   --------------------
-   Sets the default folder that LiteStep looks in when loading images. This will
-   default to <install path>\images\ (e.g. C:\LiteStep\images\).
+   Sets the default folder that LiteStep looks in when loading images.  This
+   will default to <install path>\images\ (e.g. C:\LiteStep\images\).
 
    Usage:
     LSImageFolder "C:\LiteStep\themes\mytheme\images\"
@@ -629,7 +667,7 @@ Contents:
    History
    Internet
    InternetCache
-   LitestepDir
+   LiteStepDir
    Nethood
    Printhood
    Programs
@@ -688,7 +726,7 @@ Contents:
    Displays a message box.
 
    Usage:
-    !Alert <message> [<title>]
+    !Alert <message> {title}
 
   !CascadeWindows
   ---------------
@@ -699,18 +737,18 @@ Contents:
 
   !Confirm
   --------
-   Displays a message box that allows the user to choose Yes or No. Executes a
+   Displays a message box that allows the user to choose Yes or No.  Executes a
    different command based on the users choice.
 
    Usage:
-    !Confirm <message> [<title>] <yes-command> <no-command>
+    !Confirm <message> {title} <yes-command> <no-command>
 
   !Execute
   --------
    Executes a sequence of programs or bang commands.
 
    Usage:
-    !Execute <command1> [<command2> [...]]
+    !Execute [<command-1>]{[<command-2>]...[<command-n>]}
 
   !HideModules
   ------------
@@ -721,7 +759,7 @@ Contents:
 
   !Logoff
   -------
-   Logs off the current user. Does not display a prompt first.
+   Logs off the current user.  Does not display a prompt first.
 
    Usage:
     !Logoff
@@ -735,23 +773,24 @@ Contents:
 
   !None
   -----
-   Does nothing. Useful as a placeholder where a command is required.
+   Does nothing.  Useful as a placeholder where a command is required.
 
    Usage:
     !None
 
   !Quit
   -----
-   Shuts down LiteStep, but does not shut down Windows. Be careful as there will
-   not be a shell running after this command is executed.
+   Shuts down LiteStep, but does not shut down Windows.  Be careful as there
+   will not be a shell running after this command is executed.
 
    Usage:
     !Quit
 
   !Recycle
   --------
-   Reloads configuration files and modules. You can pause a recycle operation by
-   holding down the shift key. This allows you to replace a module.
+   Reloads configuration files and modules.  You can pause a recycle operation
+   by holding down the shift key.  This allows you to replace a module without
+   quiting LiteStep.
 
    Usage:
     !Recycle
@@ -766,14 +805,14 @@ Contents:
 
   !Reload
   -------
-   Reloads configuration files. Does not reload modules or notify them.
+   Reloads configuration files.  Does not reload modules or notify them.
 
    Usage:
     !Reload
 
   !ReloadModule
   -------------
-   Reloads a specific module. Does not reload configuration files.
+   Reloads a specific module.  Does not reload configuration files.
 
    Usage:
     !ReloadModule <path>
@@ -808,7 +847,7 @@ Contents:
 
   !SwitchUser
   -----------
-   Switch to another user with logging off the current user. This command only
+   Switch to another user with logging off the current user.  This command only
    works on Windows XP or later.
 
    Usage:
@@ -842,25 +881,96 @@ Contents:
    Usage:
     !UnloadModule <path>
 
+ G) Sample Step.rc
+ -----------------
+
+ STOP: Copying and pasting the following to your step.rc will *NOT* give you a
+       working LiteStep installation.  You will first need to download the
+       relevant modules and extract them to your LiteStep folder.
+
+ NOTE: The step.rc contents is what exists between {BeginStepRC} and {EndStepRC}
+       not including those two delimiters.
+
+{BeginStepRC}
+; This is an EXAMPLE step.rc file.  This example will NOT work without
+; downloading the necessary modules (plugins) and placing them in the
+; same folder as litestep.exe.
+
+; Next, we need to load the modules (plugins) that we want to use.
+; You may download these modules from:
+;  http://www.shellfront.org/modules-list.php
+; Extract these modules into your LiteStep folder.
+LoadModule $LiteStepDir$hotkey.dll    ; hotkey-2.0.zip
+LoadModule $LiteStepDir$popup2.dll    ; popup2-2.1.5.zip
+
+; Configure a Hotkey combination to launch Notepad and open this
+; step.rc configuration file.
+*Hotkey WIN+CTRL   S   notepad.exe "$LiteStepDir$step.rc"
+
+; Configure a Hotkey to recycle (restart) LiteStep.  This will reload
+; this step.rc configuration file with any changes, and reload all modules.
+*Hotkey WIN+CTRL   R   !recycle
+
+; Configure a Hotkey to open an explorer window and quit LiteStep.
+*Hotkey WIN+CTRL   Q   !execute [explorer.exe /e,/root,,$Drives$][!quit]
+
+; Configure a Hotkey to display LiteStep's "About" dialog.
+*Hotkey WIN+CTRL   A   !about
+
+; Configure a few default hotkeys that emulate Explorer's functionality
+*Hotkey WIN        C   explorer.exe /root,,$Controls$
+*Hotkey WIN        E   explorer.exe /e,/root,,$Drives$
+*Hotkey WIN        L   !logoff
+*Hotkey WIN        M   !MinimizeWindows
+*Hotkey WIN+SHIFT  M   !RestoreWindows
+*Hotkey WIN        R   !run
+
+; NOTE: pressing CTRL+ESC or the Windows Key will display the popup menu.
+; The popup automatically configures those hotkeys.
+
+; Next, we will configure a basic Popup Menu.
+HotlistName "LiteStep 0.24.8"
+PopupIcons
+PopupAdaptiveWidth
+PopupMinWidth 125
+PopupMaxWidth 300
+PopupNoBevel
+
+*Popup "My Computer" !PopupMyComputer
+*Popup !Separator
+IF Win9x
+*Popup "Start Menu" !PopupDynamicfolder:$Startmenu$
+ENDIF
+IF WinNT
+*Popup "Start Menu" !PopupDynamicfolder:"$Startmenu$|$CommonStartMenu$"
+ENDIF
+*Popup !Separator
+*Popup "Control Panel" !PopupControlPanel
+*Popup "Recent Documents" !PopupRecentDocuments
+*Popup !Separator
+*Popup .icon="$LiteStepDir$litestep.exe,0" "Running Tasks" !PopupTasks
+{EndStepRC}
 
 -- DEVELOPMENT -----------------------------------------------------------------
 
- Please report bugs, feature requests and other feedback to the forums at
- http://www.lsdev.org/
+ Please report bugs, feature requests and other feedback to our contact address:
+
+   devteam <at> lsdev.org
 
  When reporting a bug, please include:
 
  (use the !About dialog to retrieve version information)
  - LiteStep Core Version
  - All currently loaded modules and their versions
- - Contact information (email address)
+ - Your contact information (email address)
  - A complete description of the bug and if possible a step-by-step procedure to
    reproduce the bug.  If we can not reproduce the bug, we will not be able to
-   fix it! So, please do your best to help us help you. Thanks!
+   fix it!  So, please do your best to help us help you.  Thanks!
 
- We look forward to working with any module developers out there!  Please stop
- by our forums and ask any Module development questions you might have.
-
+ We look forward to working with any module developers out there.  Please stop
+ by our IRC channel #lsdev on Freenode (irc.freenode.net).  We also have a
+ dedicated LiteStep Development mailing list open to all module developers.
+ Please visit our website http://www.lsdev.org/ for more information and links.
 
 -- CREDITS ---------------------------------------------------------------------
 
@@ -868,11 +978,23 @@ Contents:
 
  The Current Team:
  -----------------
+ - Alexander Vermaat (Acidfire)
  - Chris Rempel (jugg)
- - Erik Christiansson (Sci)
+ - Simon (ilmcuts)
+ - Tobbe Lundberg (Tobbe)
+ - Xjill
+
+ (Inactive Members)
  - Joshua Seagoe (RabidCow)
  - Kevin Schaffer (Maduin)
+
+ LiteStep 0.24.8
+ ---------------
+ - Alexander Vermaat (Acidfire)
+ - Chris Rempel (jugg)
+ - Kevin Schaffer (Maduin)
  - Simon (ilmcuts)
+ - Tobbe Lundberg (Tobbe)
 
  LiteStep 0.24.7
  ---------------
@@ -883,7 +1005,7 @@ Contents:
  Previous Developers
  -------------------
  - LiteSTEP Creator
-   Lonerunnr (Francis Gastellu)
+   Francis Gastellu (Lonerunnr)
 
  - v0.24.0 Developers & Team
    Brandon Williams (Floach)
@@ -962,100 +1084,14 @@ Contents:
    demigod
 
  And thanks to all of those who have contributed to LiteStep and its community
- over the last 8 years!  It is much appreciated by everyone.
-
--- HISTORY ---------------------------------------------------------------------
-
- In December of 1997 Francis Gastellu released the first private build (v1.0 ß1)
- of what was originally named SimpleStep, a shell replacement for Windows95.
- Over the next month several more builds were released, and the project was
- renamed to LiteSTEP, and described as LiteSTEP "will give your windows the
- AfterSTEP look&feel."
-
- Between 12/14/97 and 05/06/98, Francis released >23 Beta builds of LiteSTEP
- v1.0 with the final release of LiteSTEP 1.0 ß23d on 05/06/98.  He subsequently
- opened the Borland C Builder 1.0 based source code under the GNU GPL (General
- Public License) and handed the development over to Brandon Williams (Floach)
- and what became the Litestep Development Team.
-
- And while the source was released under the GPL, it came with the following
- text stipulating his desires to see LiteSTEP development continue fork free:
-
-   Please, do not distribute modified versions on your own or we will end up
-   with a big mess.
-
-   If you have made modifications that you would like to see in the released
-   package, contact the Litestep project coordinator and submit your work.
-
-   You may also join the Litestep development team, we welcome everybody
-   who is motivated.
-
- On 07/20/98 the new Litestep Development Team released their first build of
- LiteSTEP v1.0 ß23e with the help of Francis.
-
- On 10/27/98 the Litestep Development Team released "LiteStep Version 0.24.0"
- based on their source tree re-written in plain C using Visual Studio 5 & 6. The
- new source supported modular add-ons allowing 3rd party developers to
- contribute to LiteStep's features.  The release included a complete installer
- with a packaged theme.  Fahim then joined the team and they released three
- "upgrade" builds:
-
- 0.24.2 (10-30-98)
- 0.24.3 (11-06-98)
- 0.24.4 (11-28-98)
-
- At this point it was decided the code needed to be cleaned up significantly
- and several new developers were brought on from the module developer community
- with the focus to clean up the supported modules and core.
-
- On 08/29/99 the team released version 0.24.5 with a new installer and theme.
- Subsequently development continued for three months until Fahim quit and the
- Litestep Development Team lead was given to newcomer, Headius. NeXTer and
- Message also joined the team at that time. As development progressed and was
- taken in new directions, jugg, Ender and Visigoth decided to leave the team as
- well. The last stable release built off of the 0.24.5 code base was dubbed the
- "1999-11-23" build.
-
- Under the guide of Headius, LiteStep progressed as a C++/COM implementation
- and found many new features and improvements for Themers. Over the following
- year until early 2001, the team released many intermediate builds on their goal
- for a stable 0.24.6 release. Unfortunately because of a decision to proceed
- with a major rewrite of the shell's internals, a formal version 0.24.6 was
- never released, even though development continued on the 0.24.6 branch until
- 2002-02-16. As the rewrite (with a goal of being version 0.25.0) continued,
- the community stagnated from the lack of formal releases.
-
- In response to this situation, a group of independant developers formed what
- they named "IndieStep" to continue the 0.24.6 code base while they waited for
- the formal 0.25.0 development to finalize. Again unfortunately the development
- of 0.25.0 was abandoned due to varying circumstances, and the majority of the
- then current development team quit, leaving LiteStep dead in the water accept
- for the continuing IndieStep development.
-
- At this point the Litestep Development Team lead was given to Message, and he
- announced work on LiteStep 0.24.7 which would return the LiteStep code base
- back to stream-lined C++ implementation without COM. So, again over the
- following year as Message cleaned up the source code and fixed numerous issues,
- IndieStep continued development waiting for a 0.24.7 release.
-
- However, Message was deployed to Iraq, and was unable to continue his work on
- 0.24.7. So, The Litestep Development Team's lead once more changed, and
- Message gave it to Ilmcuts from the IndieStep effort. Ilmcuts quickly
- progressed the code base and released the first beta build of 0.24.7 on March
- 13, 2003. By May 21, 2004, he had the third release candidate of 0.24.7 ready.
-
- Now the Litestep Development Team proudly presents "LiteStep 0.24.7" on the 8th
- anniversary of this shell that will forever change the way you interact with
- your Windows desktop.
-
- http://www.lsdev.org/changelog.php
+ over the last 10+ years!  It is much appreciated by everyone.
 
 -- LEGAL -----------------------------------------------------------------------
 
  A) Documentation License Notice
  -------------------------------
 
- Copyright (c) 2005 Litestep Development Team
+ Copyright (c) 2005-2008 Litestep Development Team
 
  Permission is granted to copy, distribute and/or modify this document under the
  terms of the GNU Free Documentation License, Version 1.2 or any later version
@@ -1069,7 +1105,7 @@ Contents:
  LiteStep is a replacement shell for the standard Windows® Explorer shell.
 
  Copyright (C) 1997-1998  Francis Gastellu
- Copyright (C) 1998-2007  Litestep Development Team
+ Copyright (C) 1998-2008  Litestep Development Team
 
  This program is free software; you can redistribute it and/or modify it under
  the terms of the GNU General Public License as published by the Free Software
