--- a/docs/release_notes.txt
+++ b/docs/release_notes.txt
@@ -2,7 +2,7 @@
     LiteStep 0.24.8
     Release Notes
     
-    Copyright (c) 2008 - Litestep Development Team
+    Copyright (c) 2008 - LiteStep Development Team
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 Contents:
@@ -37,7 +37,7 @@ Contents:
 
  http://www.lsdev.org/
  ---------------------
- - The Litestep Development Team's portal.
+ - The LiteStep Development Team's portal.
  - Contains all official LiteStep releases.
  - LiteStep module development resources.
  - Community contact information.
@@ -474,7 +474,7 @@ Contents:
 
     - Variable expansion supports textual replacements and math integer
       evaluation when enclosed within a set of $ characters.
-      (e.g. $LitestepDir$ or $ScreenWidth - 32$)
+      (e.g. $LiteStepDir$ or $ScreenWidth - 32$)
 
       Math
       ----
@@ -974,7 +974,7 @@ ENDIF
 
 -- CREDITS ---------------------------------------------------------------------
 
- The Litestep Development Team:
+ The LiteStep Development Team:
 
  The Current Team:
  -----------------
@@ -1091,7 +1091,7 @@ ENDIF
  A) Documentation License Notice
  -------------------------------
 
- Copyright (c) 2005-2008 Litestep Development Team
+ Copyright (c) 2005-2008 LiteStep Development Team
 
  Permission is granted to copy, distribute and/or modify this document under the
  terms of the GNU Free Documentation License, Version 1.2 or any later version
@@ -1105,7 +1105,7 @@ ENDIF
  LiteStep is a replacement shell for the standard Windows® Explorer shell.
 
  Copyright (C) 1997-1998  Francis Gastellu
- Copyright (C) 1998-2008  Litestep Development Team
+ Copyright (C) 1998-2008  LiteStep Development Team
 
  This program is free software; you can redistribute it and/or modify it under
  the terms of the GNU General Public License as published by the Free Software
