Fix for sample step.rc *Popup line for Win9x when $Startmenu$ contained spaces.

--- a/docs/release_notes.txt
+++ b/docs/release_notes.txt
@@ -939,7 +939,7 @@ PopupNoBevel
 *Popup "My Computer" !PopupMyComputer
 *Popup !Separator
 IF Win9x
-*Popup "Start Menu" !PopupDynamicfolder:$Startmenu$
+*Popup "Start Menu" !PopupDynamicfolder:"$Startmenu$"
 ENDIF
 IF WinNT
 *Popup "Start Menu" !PopupDynamicfolder:"$Startmenu$|$CommonStartMenu$"
